# MetalTranslate

./: CMakeLists.txt  build.sh  init-mac
src/: Translate.cpp  Translate.h  main.cpp
